--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>maven-test</groupId>
     <artifactId>maven-test</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>maven-test2/maven-test2</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
